--- a/src/GymManagement.Application/GymManagement.Application.csproj
+++ b/src/GymManagement.Application/GymManagement.Application.csproj
@@ -9,5 +9,8 @@
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
   </PropertyGroup>
-
+  <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection"
+      Version="9.0.0" />
+  </ItemGroup>
 </Project>
