--- a/src/GymManagement.Application/GymManagement.Application.csproj
+++ b/src/GymManagement.Application/GymManagement.Application.csproj
@@ -10,6 +10,7 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
   <ItemGroup>
+    <PackageReference Include="ErrorOr" Version="2.1.0" />
     <PackageReference Include="MediatR" Version="12.4.1" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="9.0.0" />
   </ItemGroup>
